--- a/www/templates/placeListItem.handlebars
+++ b/www/templates/placeListItem.handlebars
@@ -1,4 +1,4 @@
-<li>
+<li data-id="{{id}}">
     <h2>{{name}}</h2>
     <p class='ui-li-aside'>{{date}}</p>
     {{#if friends}}<p>With <strong>{{friends}}</strong></p>{{/if}}
